# RD

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
model/: house.brep
src/: GlfwOcctView.cpp  GlfwOcctView.h  GlfwOcctWindow.cpp  GlfwOcctWindow.h  haunch.cpp  haunch.h  main.cpp  ml.cpp  ml.h
